Реализовал требования ТЗ 15